# bridge

./: .gitignore  CMakeLists.txt  README.markdown
include/: _error.h  _io.h  _logger.h  _memory.h  _modloader.h  bridge.h  config.h  entity.h  env.h  error.h  io.h  language.h  logger.h  macro.h  memory.h  modldr.h  modloader.h  modloadr.h  module.h  prototol.h  typesystem.h
include/bridge/: _bridge.hpp  _io.h  _logger.h  _memory.h  _modloader.h  _runtime.h  _typesystem.h  bridge.h  entity.h  env.h  error.h  foreign.h  io.h  language.h  logger.h  memory.h  modloader.h  module.h  prototol.h  runtime.h  typesystem.h
language/: CMakeLists.txt  README.markdown
language/python3/: CMakeLists.txt
language/python3/bridge.py/: bridge.c  bridge_method.c  bundle.c  bundle_method.c  setup.py
language/python3/include/bridge/language/: PyBridge.h  Python3.h
language/python3/interface/: Python3.c
lib/: CMakeLists.txt  _error.c  _io.c  _logger.c  _memory.c  _modloader.c  _modloader.cpp  _runtime.cpp  bridge.c  constant.c  error.c  io.c  logger.c  memory.c  modloader.c  runtime.c
test/: CMakeLists.txt  io.c  logger.c  main.c  modloader.c
